==> jsb9945/Quadrotor/Quadcopter-main/RF24.cpp <==
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.h"

bool RF24::begin(void)
{
 
  uint8_t setup=0;
 
    mainTimer.start();
  
    ce(LOW);
    csn(HIGH);
 
    wait_ms(100);
 
 
 
 
  // Must allow the radio time to settle else configuration bits will not necessarily stick.
  // This is actually only required following power up but some settling time also appears to
  // be required after resets too. For full coverage, we'll always assume the worst.
  // Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
  // Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
  // WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
  wait_ms( 5 ) ;
 
  // Reset NRF_CONFIG and enable 16-bit CRC.
  write_register( NRF_CONFIG, 0b00001100 ) ;
 
  // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
  // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
  // sizes must never be used. See documentation for a more complete explanation.
  setRetries(5,15);
 
  // Reset value is MAX
  //setPALevel( RF24_PA_MAX ) ;
 
  // check for connected module and if this is a p nRF24l01 variant
  //
  if( setDataRate( RF24_250KBPS ) )
  {
    p_variant = true ;
  }
  setup = read_register(RF_SETUP);
  /*if( setup == 0b00001110 )     // register default for nRF24L01P
  {
    p_variant = true ;
  }*/
  
  // Then set the data rate to the slowest (and most reliable) speed supported by all
  // hardware.
  //setDataRate( RF24_1MBPS ) ;
  setDataRate( RF24_1MBPS ) ;
 
  // Initialize CRC and request 2-byte (16bit) CRC
  setCRCLength( RF24_CRC_16 ) ;
 
  // Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
  toggle_features();
  write_register(FEATURE,0 );
  write_register(DYNPD,0);
 
  // Reset current status
  // Notice reset and flush is the last thing we do
  write_register(NRF_STATUS,_BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );
 
  // Set up default configuration.  Callers can always change it later.
  // This channel should be universally safe and not bleed over into adjacent
  // spectrum.
  setChannel(76);
 
  // Flush buffers
  flush_rx();
  flush_tx();
 
  powerUp(); //Power up by default when begin() is called
 
  // Enable PTX, do not write CE high so radio will remain in standby I mode ( 130us max to transition to RX or TX instead of 1500us from powerUp )
  // PTX should use only 22uA of power
  write_register(NRF_CONFIG, ( read_register(NRF_CONFIG) ) & ~_BV(PRIM_RX) );
    printDetails();
  // if setup is 0 or ff then there was no response from module
  return ( setup != 0 && setup != 0xff );
}

void RF24::stopListening(void)
{  
  ce(LOW);
 
  wait_us(txRxDelay);
  
  if(read_register(FEATURE) & _BV(EN_ACK_PAY)){
    wait_us(txRxDelay); //200
    flush_tx();
  }
  //flush_rx();
  write_register(NRF_CONFIG, ( read_register(NRF_CONFIG) ) & ~_BV(PRIM_RX) );
 
  
  write_register(EN_RXADDR,read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[0]))); // Enable RX on pipe0
  
  //delayMicroseconds(100);
 
}

void RF24::startWrite( const void* buf, uint8_t len, const bool multicast ){
 
  // Send the payload
 
  //write_payload( buf, len );
  write_payload( buf, len,multicast? W_TX_PAYLOAD_NO_ACK : W_TX_PAYLOAD ) ;
  ce(HIGH);
  
  wait_us(10);
  
  ce(LOW);
 
 
}
